--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /Em2012_2012-05-13_16_38_25.zip
 /Em2012_2012-05-13_18_51_19.zip
 /Em2012_2012-05-13_19_54_47.zip
+/.settings
+/.classpath
+/.project
+/application.log.1
+/log.roo
