--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -7,4 +7,6 @@ database.password=
 
 
 league.feed=http://nak.zomtec.eu/kicker-demo.json
+check.detail.cron=0 30 4 * * ?
+check.score.cron=0 0/1 * * * ?
 bootstrap=true
