--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=error, stdout, R
+log4j.rootLogger=WARN, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -9,11 +9,11 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=application.log
 
-log4j.appender.R.MaxFileSize=100KB
+log4j.appender.R.MaxFileSize=1MB
 # Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
+log4j.appender.R.MaxBackupIndex=100
 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.R.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.eu.zomtec.em2012=DEBUG
