--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,28 @@
         </init-param>
     </filter>
     
-    
+    <filter>
+       <filter-name>ExpiresFilter</filter-name>
+       <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+       <init-param>
+          <param-name>ExpiresByType image</param-name>
+          <param-value>access plus 24 hours</param-value>
+       </init-param>
+       <init-param>
+          <param-name>ExpiresByType text/css</param-name>
+          <param-value>access plus 1 hour</param-value>
+       </init-param>
+       <init-param>
+          <param-name>ExpiresByType text/html</param-name>
+          <param-value>access plus -1 hour</param-value>
+       </init-param>
+    </filter>
+
+    <filter-mapping>
+       <filter-name>ExpiresFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+       <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
     
     <filter>
         <filter-name>HttpMethodFilter</filter-name>
