--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,12 +1,16 @@
 #Updated at Sun May 13 15:38:25 GMT+07:00 2012
 #Sun May 13 15:38:25 GMT+07:00 2012
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://localhost\:3306/em2012
+database.url=jdbc\:mysql\://localhost\:3306/euro-bet
 database.username=root
 database.password=
 
-
-league.feed=http://nak.zomtec.eu/kicker-demo.json
-check.detail.cron=0 0 0 * * ?
-check.score.cron=0 0 0 * * ?
+#dummy - create a copy for testing!!!
+#league.feed=http://nak.zomtec.eu/kicker-demo.json
+#euro:
+#league.feed=http://api1.footiefox.com/leagues/107/base.json
+#world:
+league.feed=http://api1.footiefox.com/leagues/101/base.json
+check.detail.cron=0 30 4 * * ?
+check.score.cron=0 0/1 * * * ?
 bootstrap=true
