--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    
+
     <display-name>Em2012</display-name>
-    
+
     <description>Roo generated Em2012 application</description>
 
-    
+
     <!-- Enable escaping of form submission contents -->
     <context-param>
         <param-name>defaultHtmlEscape</param-name>
         <param-value>true</param-value>
     </context-param>
-    
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath*:META-INF/spring/applicationContext*.xml</param-value>
     </context-param>
-    
+
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -30,37 +31,37 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-    
-    <filter>
-       <filter-name>ExpiresFilter</filter-name>
-       <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
-       <init-param>
-          <param-name>ExpiresByType image</param-name>
-          <param-value>access plus 24 hours</param-value>
-       </init-param>
-       <init-param>
-          <param-name>ExpiresByType text/css</param-name>
-          <param-value>access plus 1 hour</param-value>
-       </init-param>
-       <init-param>
-          <param-name>ExpiresByType text/html</param-name>
-          <param-value>access plus -1 hour</param-value>
-       </init-param>
-    </filter>
+    <!--
+        <filter>
+            <filter-name>ExpiresFilter</filter-name>
+            <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+            <init-param>
+                <param-name>ExpiresByType image</param-name>
+                <param-value>access plus 24 hours</param-value>
+            </init-param>
+            <init-param>
+                <param-name>ExpiresByType text/css</param-name>
+                <param-value>access plus 1 hour</param-value>
+            </init-param>
+            <init-param>
+                <param-name>ExpiresByType text/html</param-name>
+                <param-value>access plus -1 hour</param-value>
+            </init-param>
+        </filter>
 
-    <filter-mapping>
-       <filter-name>ExpiresFilter</filter-name>
-       <url-pattern>/*</url-pattern>
-       <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
-    
+        <filter-mapping>
+            <filter-name>ExpiresFilter</filter-name>
+            <url-pattern>/*</url-pattern>
+            <dispatcher>REQUEST</dispatcher>
+        </filter-mapping>
+    -->
+
     <filter>
         <filter-name>HttpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
-    
-    
-    
+
+
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -73,14 +74,13 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
+
     <filter-mapping>
         <filter-name>HttpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
-    
-    
+
+
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
@@ -89,12 +89,12 @@
         <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
+
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    
+
     <!-- Handles Spring requests -->
     <servlet>
         <servlet-name>Em2012</servlet-name>
@@ -105,21 +105,21 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    
+
     <servlet-mapping>
         <servlet-name>Em2012</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    
+
     <session-config>
         <session-timeout>120</session-timeout>
     </session-config>
-    
+
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/uncaughtException</location>
     </error-page>
-    
+
     <error-page>
         <error-code>404</error-code>
         <location>/resourceNotFound</location>
